packages/svelte/tests/compiler-errors/samples/const-tag-sequence/main.svelte
{#if true}
	{@const foo = ('bar', 'baz')}
{/if}

{#if true}
	{@const foo = 'foo', bar = 'bar'}
{/if}